--- a/build.gradle
+++ b/build.gradle
@@ -19,14 +19,20 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+	// WebSocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	// SMTP
 	implementation group: 'org.apache.commons', name: 'commons-email', version: '1.4'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'com.google.code.gson:gson:2.10'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -36,6 +42,11 @@ dependencies {
 	implementation 'org.apache.httpcomponents:httpclient'
 	// http core
 	implementation 'org.apache.httpcomponents:httpcore'
+	// Jackson
+	//implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.4'
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
+	// @Value 어노테이션
+	implementation'org.springframework.boot:spring-boot-configuration-processor'
 }
 
 tasks.named('test') {
