--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port = 8888
+server.servlet.session.timeout=86400
 
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
@@ -24,3 +25,4 @@ spring.jpa.hibernate.naming.physical-strategy = org.hibernate.boot.model.naming.
 
 #DEBUG
 #logging.level.org.thymeleaf=DEBUG
+# session timeout 24 hours
